fix pour les overflow du nav

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ li
 	padding: 2px;
 	color: #fff;
 	border: 2px outset grey;
+	overflow: hidden;
 }
 
 li:hover
@@ -66,6 +67,7 @@ a
 	padding: 2px;
 	color: #fff;
 	border: 1px outset grey;
+	overflow: hidden;
 }
 
 a:hover
